--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,6 @@
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #f5f5f5;
+@import url('https://fonts.googleapis.com/css?family=Nunito|Pacifico');
+
+
+html, body {
+  font-family: 'Nunito', sans-serif;
 }
